--- a/public/styles.css
+++ b/public/styles.css
@@ -4,3 +4,11 @@
     background-color: beige;
     text-align: center;
 } */
+
+table {
+    border-collapse: collapse;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
